tests/fail/parse/error-recovery.fathom
//~ exit-code = 1

let x : Type = {;

x : Type -> Type
